--- a/astrometrylib/astrometrylib.vcxproj
+++ b/astrometrylib/astrometrylib.vcxproj
@@ -42,7 +42,6 @@
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <EnableASAN>true</EnableASAN>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -56,7 +55,6 @@
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <EnableASAN>true</EnableASAN>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -208,6 +206,7 @@
     <ClInclude Include="..\vendor\stb\stb_image.h" />
     <ClInclude Include="..\vendor\stb\stb_image_resize.h" />
     <ClInclude Include="..\vendor\stb\stb_image_write.h" />
+    <ClInclude Include="astrometrylib.hpp" />
     <ClInclude Include="src\include\compat.h" />
     <ClInclude Include="src\include\fit-wcs.h" />
     <ClInclude Include="src\include\gslutils.h" />
