--- a/Makefile.conf
+++ b/Makefile.conf
@@ -5,19 +5,6 @@
 # heavy RAM usage peaks. Other than that the order is arbitrary.
 
 INCFILES = \
-	sass.h \
-	sass/base.h \
-	sass/compiler.h \
-	sass/context.h \
-	sass/enums.h \
-	sass/error.h \
-	sass/function.h \
-	sass/fwdecl.h \
-	sass/import.h \
-	sass/lists.h \
-	sass/traces.h \
-	sass/values.h \
-	sass/version.h
 
 HFILES = \
 	vendor/sep/sepcore.h \
@@ -27,10 +14,10 @@ HFILES = \
 	
 HPPFILES = \
 
-SOURCES = \
+CFILES = \
 	astrometrylib/astrometrylib.cpp
 
-CSOURCES = \
+CPPFILES = \
 	vendor/sep/util.c \
 	vendor/sep/lutz.c \
 	vendor/sep/extract.c \
